# silma

./: Cargo.toml  README.md
src/: lib.rs
src/edge_detection/: mod.rs
src/filters/: average.rs  bilateral.rs  gaussian.rs  median.rs  mod.rs  sobel.rs
src/util/: mod.rs
tests/: blur.rs  median.rs  sobel.rs
