[package]
name = "silma"
version = "0.1.0"
authors = ["Abhik Jain <abhikjain360@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
nalgebra = "*"
rayon = "*"
num-traits = "*"

[[bin]]
name = "run"
path = "src/bin/main.rs"
